--- a/be-app/.env
+++ b/be-app/.env
@@ -6,11 +6,11 @@ APP_PORT=3001
 # Database
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=yourpassword
-DB_NAME=mydatabase
+DB_USER=lawrient
+DB_PASSWORD=12
+DB_NAME=clone_discord
 DB_SSLMODE=disable
 
 # JWT / Auth
-JWT_SECRET=my_super_secret_key
+JWT_SECRET=somethingcoolwithjwtsecret
 JWT_EXPIRE_MINUTES=60
