--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
