--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "jotai": "^2.12.5",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
