--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@livekit/components-react": "^2.9.16",
+    "@livekit/components-styles": "^1.2.0",
     "clsx": "^2.1.1",
     "jotai": "^2.12.5",
     "js-cookie": "^3.0.5",
+    "livekit-server-sdk": "^2.14.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "radix-ui": "^1.4.2",
