--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     - ./be-app/.env
     environment:
     - APP_PORT=${APP_PORT}
+    - ALLOW_ORIGIN=${ALLOW_ORIGIN}
     - DB_HOST=${DB_HOST}
     - DB_PORT=${DB_PORT}
     - DB_USER=${DB_USER}
