--- a/be-app/Dockerfile
+++ b/be-app/Dockerfile
@@ -7,6 +7,7 @@ RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o app .
 
+ENV GOBIN=/go/bin
 RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
 # --- RUNNER ---
 FROM alpine:3.19
@@ -14,8 +15,7 @@ WORKDIR /app
 
 COPY --from=builder /app/app .
 
-
-COPY --from=builder /root/go/bin/migrate /usr/local/bin/migrate
+COPY --from=builder /go/bin/migrate /usr/local/bin/migrate
 
 EXPOSE 8080
 CMD ["/app/app"]
