--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
     - "3000:3000"
     env_file:
-    - ./fe-app/.env
+    - ./.env
     environment:
     - NEXT_PUBLIC_HOST_API=${NEXT_PUBLIC_HOST_API}
     - NEXT_PUBLIC_HOST_WS=${NEXT_PUBLIC_HOST_WS}
@@ -23,7 +23,7 @@ services:
     ports:
     - "8080:8080"
     env_file:
-    - ./be-app/.env
+    - ./.env
     environment:
     - APP_PORT=${APP_PORT}
     - ALLOW_ORIGIN=${ALLOW_ORIGIN}
