--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
     - "3000:3000"
     env_file:
-    - ./.env
+    - ./fe-app/.env
     environment:
     - NEXT_PUBLIC_HOST_API=${NEXT_PUBLIC_HOST_API}
     - NEXT_PUBLIC_HOST_WS=${NEXT_PUBLIC_HOST_WS}
