--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     restart: always
     ports:
     - "3000:3000"
-    env_file:
-    - ./.env
-    environment:
-    - NEXT_PUBLIC_HOST_API=${NEXT_PUBLIC_HOST_API}
-    - NEXT_PUBLIC_HOST_WS=${NEXT_PUBLIC_HOST_WS}
-    - NEXT_PUBLIC_LIVEKIT_URL=${NEXT_PUBLIC_LIVEKIT_URL}
+    # env_file:
+    # - ./.env
+    # environment:
+    # - NEXT_PUBLIC_HOST_API=${NEXT_PUBLIC_HOST_API}
+    # - NEXT_PUBLIC_HOST_WS=${NEXT_PUBLIC_HOST_WS}
+    # - NEXT_PUBLIC_LIVEKIT_URL=${NEXT_PUBLIC_LIVEKIT_URL}
     networks:
       - app
 
