--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -5,8 +5,18 @@ COPY package.json bun.lock ./
 RUN bun install
 
 
-RUN echo "DEBUG ENV: $NEXT_PUBLIC_HOST_API"
 
+ARG NEXT_PUBLIC_HOST_API
+ARG NEXT_PUBLIC_HOST_WS
+ARG NEXT_PUBLIC_LIVEKIT_URL
+
+ENV NEXT_PUBLIC_HOST_API=$NEXT_PUBLIC_HOST_API
+ENV NEXT_PUBLIC_HOST_WS=$NEXT_PUBLIC_HOST_WS
+ENV NEXT_PUBLIC_LIVEKIT_URL=$NEXT_PUBLIC_LIVEKIT_URL
+
+RUN echo "API: $NEXT_PUBLIC_HOST_API"
+RUN echo "WS: $NEXT_PUBLIC_HOST_WS"
+RUN echo "LIVEKIT: $NEXT_PUBLIC_LIVEKIT_URL"
 
 COPY . .
 RUN bun run build
