--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -4,8 +4,6 @@ WORKDIR /app
 COPY package.json bun.lock ./
 RUN bun install
 
-
-
 ARG NEXT_PUBLIC_HOST_API
 ARG NEXT_PUBLIC_HOST_WS
 ARG NEXT_PUBLIC_LIVEKIT_URL
@@ -24,6 +22,15 @@ RUN bun run build
 # --- RUNNER ---
 FROM oven/bun:1.2.21
 WORKDIR /app
+
+
+ARG NEXT_PUBLIC_HOST_API
+ARG NEXT_PUBLIC_HOST_WS
+ARG NEXT_PUBLIC_LIVEKIT_URL
+
+ENV NEXT_PUBLIC_HOST_API=$NEXT_PUBLIC_HOST_API
+ENV NEXT_PUBLIC_HOST_WS=$NEXT_PUBLIC_HOST_WS
+ENV NEXT_PUBLIC_LIVEKIT_URL=$NEXT_PUBLIC_LIVEKIT_URL
 
 COPY --from=builder /app/ ./
 
