--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.9"
 
 services:
   frontend:
-    build: ./fe-app
+    # build: ./fe-app
+    image: lawrient/fe-app:latest
     container_name: frontend
     restart: always
     ports:
