--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,7 @@ jobs:
             cd clone-discord
             # Buat file .env dari secrets
             echo "ALLOW_ORIGIN=${{ secrets.ALLOW_ORIGIN }}" >> .env
+            echo "APP_PORT=${{ secrets.APP_PORT }}" >> .env
             echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
             echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
             echo "DB_USER=${{ secrets.DB_USER }}" >> .env
