--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,8 @@ services:
     image: lawrient/fe-app:latest
     container_name: frontend
     restart: always
-    # ports:
-    # - "3000:3000"
-    expose:
-      - "3000"
+    ports:
+    - "3000:3000"
     networks:
       - app
 
@@ -17,10 +15,8 @@ services:
     build: ./be-app
     container_name: backend
     restart: always
-    # ports:
-    # - "8080:8080"
-    expose:
-      - "8080"
+    ports:
+    - "8080:8080"
     env_file:
     - ./.env
     environment:
@@ -44,10 +40,8 @@ services:
 
   postgres:
     image: postgres:16
-    # ports:
-    #   - "5432:5432"
-    expose:
-      - "5432"
+    ports:
+      - "5432:5432"
     environment:
         POSTGRES_DB: ${DB_NAME}
         POSTGRES_USER: ${DB_USER}
