--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -16,10 +16,10 @@
     "js-cookie": "^3.0.5",
     "livekit-server-sdk": "^2.14.2",
     "lucide-react": "^0.525.0",
-    "next": "15.3.3",
+    "next": "^16.0.10",
     "radix-ui": "^1.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
