--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,14 +25,14 @@ jobs:
 
       - name: Build backend image
         run: |
-          docker build -t lawrient/be-app:latest ./be-app
+          docker build -t lawrient/dc-be-app:latest ./be-app
       - name: Build frontend image
         run: |
          docker build \
          --build-arg NEXT_PUBLIC_HOST_API=${{ secrets.NEXT_PUBLIC_HOST_API }} \
          --build-arg NEXT_PUBLIC_HOST_WS=${{ secrets.NEXT_PUBLIC_HOST_WS }} \
          --build-arg NEXT_PUBLIC_LIVEKIT_URL=${{ secrets.NEXT_PUBLIC_LIVEKIT_URL }} \
-         -t lawrient/fe-app:latest ./fe-app
+         -t lawrient/dc-fe-app:latest ./fe-app
 
       - name: Push backend image
         run: docker push lawrient/be-app:latest
